# tf-pose-estimation

./: CMakeLists.txt  README.md  setup.py
etcs/: name_table.csv
include/tfpose_ros/: realsence_once.h
launch/: kinect.launch  realsense.launch  realsense_once.launch  webcam.launch  webcam_test.launch
msg/: Pose.msg
scripts/: broadcaster_ros.py  send_image.py  tfpose_viewer.py  viewer.py  visualization.py
src/: camera.cpp  kinect.cpp  realsense.cpp  realsense_once.cpp
tf_pose/: estimator.py  runner.py
